// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`STO side nav tests renders account path 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <button
      id="projectSelector"
    />
  </div>
</div>
`;

exports[`STO side nav tests renders project path 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
  >
    <button
      id="projectSelector"
    />
    <a
      aria-current="page"
      class="link selected"
      href="/account/accountId/sto/orgs/orgIdentifier/projects/projectIdentifier/overview"
    >
      <p
        class="StyledProps--font StyledProps--main text"
      >
        overview
      </p>
    </a>
    <a
      class="link"
      href="/account/accountId/sto/orgs/orgIdentifier/projects/projectIdentifier/deployments"
    >
      <p
        class="StyledProps--font StyledProps--main text"
      >
        common.purpose.sto.continuous
      </p>
    </a>
    <a
      class="link"
      href="/account/accountId/sto/orgs/orgIdentifier/projects/projectIdentifier/pipelines"
    >
      <p
        class="StyledProps--font StyledProps--main text"
      >
        pipelines
      </p>
    </a>
    <a
      class="link"
      href="/account/accountId/sto/orgs/orgIdentifier/projects/projectIdentifier/targets"
    >
      <p
        class="StyledProps--font StyledProps--main text"
      >
        stoSteps.targets.testTargets
      </p>
    </a>
  </div>
</div>
`;
